index update 1st

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>I'm Adarsh.</h1>
         <h3>a Web Developer.</h3>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
-        <img src="images/mountain.png" alt="cloud">
+        <img class"mountain" src="images/mountain.png" alt="cloud">
     </div>
     <div class="middle-container">
         <div class="profile">
@@ -39,7 +39,7 @@
             <div class="skill-row">
                 <img class="code-image" src="https://media.giphy.com/media/L8K62iTDkzGX6/giphy.gif" alt="web-developer">
                 <h3>Design & Developer</h3>
-                <p>I am a new budding web-developer, who have knowledge of some programming lamguages like
+                <p>I am a new budding web-developer, who have knowledge of some programming languages like
                     C, C++ , JAVA, PYTHON. will return project before due date. </p>
             </div>
             <div class="skill-row">
